...
                        },
                        onClick = onServiceCreateButtonClicked
                    ) {
                        Icon(
                            modifier = Modifier.size(48.dp),
                            painter = painterResource(id = R.drawable.ic_add),
                            contentDescription = "Add Service"
                        )
                    }
                }
            )
            // Dialog
            serviceModalData.let {
...
