...
            onDueDateFieldClicked = { showDueDateDialog = true }
        )

        when {
            showRepairDateDialog -> {
                CalendarDialog(
                    title = "Repair Date",
                    onDismissed = { showRepairDateDialog = false },
                    onValueSelected = {
                        onUpdateState(
                            state.copy(
                                repairDate = it.getShortenedDate()
                            )
...
                    }
                )
            }

            showDueDateDialog -> {
                CalendarDialog(
                    title = "Due Date",
                    date = Calendar.getInstance().apply {
                        add(Calendar.DAY_OF_MONTH, DEFAULT_DUE_DATE_ADDITION)
                    },
                    onDismissed = { showDueDateDialog = false },
                    onValueSelected = {
                        onUpdateState(
...
