...
                    Timber.v("Navigating back to Overview fragment")
                    findNavController().popBackStack()
                }
            }
            viewModel.onVerify.observe(viewLifecycleOwner) { verificationSuccess ->
                if (verificationSuccess.not()) {
                    toast("Missing required fields")
                }

            }
        }
    }

...
