# The purpose of this script is to go over the entire Service modal and try out all of the
## failing scenarios, before culminating in the creation of our 'alpha' test Service.
appId: com.ivangarzab.carrus.debug
---
- runFlow: # make sure the create service modal is open
    when:
      notVisible: "Create Service"
    commands:
      - tapOn: "Add Service"
- tapOn: "Submit"
- assertVisible: "Missing required field(s) or wrong data"
- tapOn: "Service name*"
- inputText: "alpha"
- "back"
- tapOn: "Submit"
- assertVisible: "Missing required field(s) or wrong data"
- tapOn: "Service material brand"
- inputText: "the brand"
- pressKey: "enter"
- inputText: "type & spec"
- pressKey: "enter"
- inputText: 99.99
- pressKey: "enter"
- tapOn: "Submit"
- assertVisible: "Missing required field(s) or wrong data"
- tapOn: "Repair date*"
- assertVisible: "Repair Date"
- tapOn: "Submit"
- assertVisible: "Due Date"
- tapOn: "Submit"
- tapOn: "Submit"
