# The purpose of this script is to go over the entire Service modal and try out all of the
## failing scenarios, before culminating in the creation of our full 'zetta' test Service.
appId: com.ivangarzab.carrus.debug
---
- runFlow: # make sure the create service modal is open
    when:
      notVisible: "Create Service"
    commands:
      - tapOn: "Add Service"
- tapOn: "Service name*"
- inputText: "zetta"
- pressKey: "enter"
- assertVisible: "Repair Date"
- tapOn:
    point: "50%,15%"
- assertVisible: "Due Date"
- longPressOn: "Due Date"
- tapOn: "Service material brand"
- inputText: "brand"
- pressKey: "enter"
- inputText: "type/spec"
- pressKey: "enter"
- inputText: 150
- pressKey: "enter"
- tapOn: "Submit"
